# MidiKraft-database

./: CMakeLists.txt  CategoryBitfield.cpp  CategoryBitfield.h  Dynamo.cpp  Dynamo.h  JsonSchema.cpp  JsonSchema.h  JsonSerialization.cpp  JsonSerialization.h  PatchDatabase.cpp  PatchDatabase.h  PatchFilter.cpp  PatchFilter.h
